--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -39,6 +39,11 @@
     filter: blur(2px);
   }
 
+  html[data-theme="light"] .heroWrapper::before {
+    background-image: url("/img/bg.png"),
+      linear-gradient(to top, rgba(0, 0, 0, 0.2) 10%, transparent);
+  }
+
   .heroWrapper:hover::before {
     filter: blur(3px);
   }
